--- a/css/_index.scss
+++ b/css/_index.scss
@@ -106,7 +106,7 @@
           margin: 0 0 16px 24px;
         }
       }
-      .text {
+      .description {
         color: #4b4a4a;
         font-family: Raleway;
         font-size: 21px;
@@ -165,7 +165,7 @@
           line-height: 24px;
         }
       }
-      .text {
+      .description {
         font-family: Raleway;
         font-size: 19px;
         font-weight: 500;
@@ -238,7 +238,7 @@
             margin: 8px 0;
           }
         }
-        .text {
+        .description {
           font-family: Raleway;
           font-size: 19px;
           font-weight: 600;
@@ -252,7 +252,7 @@
       }
     }
   }
-  .text {
+  .description {
     font-family: Raleway;
     font-size: 16px;
     font-weight: 400;
