--- a/css/_entry.scss
+++ b/css/_entry.scss
@@ -266,6 +266,18 @@
             }
         }
     }
+    .contacts {
+        list-style: none;
+        margin-left: 22px;
+        li {
+            font-family: Raleway;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 19px;
+            color: #4b4a4a;
+            margin-bottom: 4px;
+        }
+    }
     .box {
         display: flex;
         flex-direction: row;
