--- a/css/_index.scss
+++ b/css/_index.scss
@@ -5,7 +5,7 @@
 }
 @mixin for-tablet-portrait {
   @media (min-width: 599px) and (max-width: 870px) {
-      @content;
+    @content;
   }
 }
 
@@ -188,7 +188,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-  
+
         @include for-tablet-portrait {
           background-image: url(../img/Slider-3-background.jpg);
           background-position: top;
@@ -284,6 +284,27 @@
         color: blueviolet;
       }
     }
+  }
+}
+.restriction {
+  padding: 48px 0;
+  text-align: center;
+  h3 {
+    margin-bottom: 16px;
+  }
+  .redzone__image {
+    width: 100%;
+  }
+  .links {
+    display: inline-block;
+    margin-right: 24px;
+  }
+  @include for-tablet-portrait {
+    width: 80%;
+  }
+  @include for-phone-only {
+    padding: 24px 16px;
+    width: 75%;
   }
 }
 
