--- a/css/style.css
+++ b/css/style.css
@@ -1016,6 +1016,32 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: blueviolet;
 }
 
+.restriction {
+  padding: 48px 0;
+  text-align: center;
+}
+.restriction h3 {
+  margin-bottom: 16px;
+}
+.restriction .redzone__image {
+  width: 100%;
+}
+.restriction .links {
+  display: inline-block;
+  margin-right: 24px;
+}
+@media (min-width: 599px) and (max-width: 870px) {
+  .restriction {
+    width: 80%;
+  }
+}
+@media (max-width: 599px) {
+  .restriction {
+    padding: 24px 16px;
+    width: 75%;
+  }
+}
+
 .footer__section {
   position: absolute;
   left: 0;
