--- a/css/_index.scss
+++ b/css/_index.scss
@@ -290,7 +290,7 @@
   padding: 48px 0;
   text-align: center;
   h3 {
-    margin-bottom: 16px;
+    margin-bottom: 36px;
   }
   .redzone__image {
     width: 100%;
@@ -300,45 +300,102 @@
     margin-right: 24px;
   }
   @include for-tablet-portrait {
-    width: 80%;
+    width: 90%;
   }
   @include for-phone-only {
-    padding: 24px 16px;
-    width: 75%;
+    padding: 36px 16px;
+    width: 90%;
   }
 }
+.footer__container {
+  position: relative;
+  .footer__section {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    min-height: 68px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-.footer__section {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  min-height: 68px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    @include for-tablet-portrait {
+      min-height: 52px;
+      background-color: #cc0001;
+      box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
+    }
 
-  @include for-tablet-portrait {
-    min-height: 52px;
-    background-color: #cc0001;
-    box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
-  }
+    @include for-phone-only {
+      min-height: 38px;
+      background-color: #cc0001;
+      box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
+    }
 
-  @include for-phone-only {
-    min-height: 38px;
-    background-color: #cc0001;
-    box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
-  }
+    .footer__about {
+      font-family: Raleway;
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 21px;
+      color: #4b4a4a;
+      text-align: center;
+      margin: 0;
 
-  .footer__about {
-    font-family: Raleway;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 21px;
-    color: #4b4a4a;
-    text-align: center;
-    margin: 0;
+      .link {
+        color: #cc0001;
+        text-decoration: none;
+        cursor: pointer;
+        i {
+          &:hover {
+            transition: all 1s linear;
+            transform: scale(1.2);
+          }
+        }
+
+        &:hover {
+          font-weight: 600;
+        }
+
+        &:visited {
+          color: #cc0001;
+
+          @include for-tablet-portrait {
+            color: white;
+          }
+        }
+
+        @include for-tablet-portrait {
+          color: white;
+        }
+      }
+
+      @include for-tablet-portrait {
+        color: white;
+        font-size: 12px;
+      }
+
+      @include for-phone-only {
+        display: none;
+      }
+    }
+
+    .footer__text {
+      font-family: Raleway;
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 21px;
+      color: #4b4a4a;
+      text-align: center;
+      margin: 0;
+
+      @include for-tablet-portrait {
+        color: white;
+      }
+
+      @include for-phone-only {
+        color: white;
+      }
+    }
 
     .link {
       color: #cc0001;
@@ -347,7 +404,7 @@
       i {
         &:hover {
           transition: all 1s linear;
-          transform: scale(1.2);
+          transform: scale(1.1);
         }
       }
 
@@ -361,58 +418,11 @@
         @include for-tablet-portrait {
           color: white;
         }
+
+        @include for-phone-only {
+          color: white;
+        }
       }
-
-      @include for-tablet-portrait {
-        color: white;
-      }
-    }
-
-    @include for-tablet-portrait {
-      color: white;
-      font-size: 12px;
-    }
-
-    @include for-phone-only {
-      display: none;
-    }
-  }
-
-  .footer__text {
-    font-family: Raleway;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 21px;
-    color: #4b4a4a;
-    text-align: center;
-    margin: 0;
-
-    @include for-tablet-portrait {
-      color: white;
-    }
-
-    @include for-phone-only {
-      color: white;
-    }
-  }
-
-  .link {
-    color: #cc0001;
-    text-decoration: none;
-
-    i {
-      &:hover {
-        transition: all 1s linear;
-        transform: scale(1.1);
-      }
-    }
-
-    &:hover {
-      font-weight: 600;
-    }
-
-    &:visited {
-      color: #cc0001;
 
       @include for-tablet-portrait {
         color: white;
@@ -421,14 +431,6 @@
       @include for-phone-only {
         color: white;
       }
-    }
-
-    @include for-tablet-portrait {
-      color: white;
-    }
-
-    @include for-phone-only {
-      color: white;
     }
   }
 }
