--- a/css/style.css
+++ b/css/style.css
@@ -1021,7 +1021,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   text-align: center;
 }
 .restriction h3 {
-  margin-bottom: 16px;
+  margin-bottom: 36px;
 }
 .restriction .redzone__image {
   width: 100%;
@@ -1032,18 +1032,21 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 @media (min-width: 599px) and (max-width: 870px) {
   .restriction {
-    width: 80%;
+    width: 90%;
   }
 }
 @media (max-width: 599px) {
   .restriction {
-    padding: 24px 16px;
-    width: 75%;
+    padding: 36px 16px;
+    width: 90%;
   }
 }
 
-.footer__section {
-  position: absolute;
+.footer__container {
+  position: relative;
+}
+.footer__container .footer__section {
+  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -1063,7 +1066,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
           align-items: center;
 }
 @media (min-width: 599px) and (max-width: 870px) {
-  .footer__section {
+  .footer__container .footer__section {
     min-height: 52px;
     background-color: #cc0001;
     -webkit-box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
@@ -1071,14 +1074,14 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   }
 }
 @media (max-width: 599px) {
-  .footer__section {
+  .footer__container .footer__section {
     min-height: 38px;
     background-color: #cc0001;
     -webkit-box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
             box-shadow: 0px -5px 9px -5px rgba(87, 89, 91, 0.6);
   }
 }
-.footer__section .footer__about {
+.footer__container .footer__section .footer__about {
   font-family: Raleway;
   font-size: 14px;
   font-weight: 500;
@@ -1087,44 +1090,45 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   text-align: center;
   margin: 0;
 }
-.footer__section .footer__about .link {
+.footer__container .footer__section .footer__about .link {
   color: #cc0001;
   text-decoration: none;
+  cursor: pointer;
 }
-.footer__section .footer__about .link i:hover {
+.footer__container .footer__section .footer__about .link i:hover {
   -webkit-transition: all 1s linear;
   transition: all 1s linear;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
 }
-.footer__section .footer__about .link:hover {
+.footer__container .footer__section .footer__about .link:hover {
   font-weight: 600;
 }
-.footer__section .footer__about .link:visited {
+.footer__container .footer__section .footer__about .link:visited {
   color: #cc0001;
 }
 @media (min-width: 599px) and (max-width: 870px) {
-  .footer__section .footer__about .link:visited {
+  .footer__container .footer__section .footer__about .link:visited {
     color: white;
   }
 }
 @media (min-width: 599px) and (max-width: 870px) {
-  .footer__section .footer__about .link {
+  .footer__container .footer__section .footer__about .link {
     color: white;
   }
 }
 @media (min-width: 599px) and (max-width: 870px) {
-  .footer__section .footer__about {
+  .footer__container .footer__section .footer__about {
     color: white;
     font-size: 12px;
   }
 }
 @media (max-width: 599px) {
-  .footer__section .footer__about {
+  .footer__container .footer__section .footer__about {
     display: none;
   }
 }
-.footer__section .footer__text {
+.footer__container .footer__section .footer__text {
   font-family: Raleway;
   font-size: 14px;
   font-weight: 500;
@@ -1134,48 +1138,48 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   margin: 0;
 }
 @media (min-width: 599px) and (max-width: 870px) {
-  .footer__section .footer__text {
+  .footer__container .footer__section .footer__text {
     color: white;
   }
 }
 @media (max-width: 599px) {
-  .footer__section .footer__text {
+  .footer__container .footer__section .footer__text {
     color: white;
   }
 }
-.footer__section .link {
+.footer__container .footer__section .link {
   color: #cc0001;
   text-decoration: none;
 }
-.footer__section .link i:hover {
+.footer__container .footer__section .link i:hover {
   -webkit-transition: all 1s linear;
   transition: all 1s linear;
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
-.footer__section .link:hover {
+.footer__container .footer__section .link:hover {
   font-weight: 600;
 }
-.footer__section .link:visited {
+.footer__container .footer__section .link:visited {
   color: #cc0001;
 }
 @media (min-width: 599px) and (max-width: 870px) {
-  .footer__section .link:visited {
+  .footer__container .footer__section .link:visited {
     color: white;
   }
 }
 @media (max-width: 599px) {
-  .footer__section .link:visited {
+  .footer__container .footer__section .link:visited {
     color: white;
   }
 }
 @media (min-width: 599px) and (max-width: 870px) {
-  .footer__section .link {
+  .footer__container .footer__section .link {
     color: white;
   }
 }
 @media (max-width: 599px) {
-  .footer__section .link {
+  .footer__container .footer__section .link {
     color: white;
   }
 }
